Update name of the collection

--- a/public/config/config.json
+++ b/public/config/config.json
@@ -6,8 +6,8 @@
     "SYMBOL": "SGB",
     "ID": 19
   },
-  "NFT_NAME": "Sgb Pnks",
-  "SYMBOL": "SPNK",
+  "NFT_NAME": "Flare Punks",
+  "SYMBOL": "FPNK",
   "MAX_SUPPLY": 10000,
   "WEI_COST": 200000000000000,
   "DISPLAY_COST": 0.0002,
