Change Opensea for Sparkles

--- a/public/config/config.json
+++ b/public/config/config.json
@@ -12,7 +12,7 @@
   "WEI_COST": 200000000000000,
   "DISPLAY_COST": 0.0002,
   "GAS_LIMIT": 285000,
-  "MARKETPLACE": "Opeansea",
-  "MARKETPLACE_LINK": "https://opensea.io/collection/nerdy-coder-clones",
+  "MARKETPLACE": "Sparkles",
+  "MARKETPLACE_LINK": "https://sparklesnft.com/collection/sgb-pnks/",
   "SHOW_BACKGROUND": true
 }
