Update name of the collection

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "FPNK",
-  "name": "Flare Punks NFT",
+  "short_name": "GM",
+  "name": "Grumpy Punks NFT",
   "icons": [
     {
       "src": "favicon.ico",
