--- a/public/config/config.json
+++ b/public/config/config.json
@@ -7,7 +7,7 @@
     "ID": 14
   },
   "NFT_NAME": "Grumpy Punks",
-  "SYMBOL": "GM",
+  "SYMBOL": "GP",
   "MAX_SUPPLY": 10000,
   "WEI_COST": 600000000000000000000,
   "DISPLAY_COST": 600,
